Fixed findbugs warnings.